Ureadable table in about:performance fix #63

--- a/userContent.css
+++ b/userContent.css
@@ -783,17 +783,8 @@
   }
 
   #subprocess-reports td {
-    background-color: var(--primary-light-color) !important;
-  }
-
-  table {
-    background-color: red !important;
-    color: -moz-DialogText;
-    font: message-box;
-    text-align: start;
-    width: 100%;
-    border: 1px solid ThreeDShadow;
-    border-spacing: 0px;
+    background-color: var(--dark-accent) !important;
+    border-color: var(--grey-70) !important;
   }
 }
 @-moz-document url(about:plugins)  {
